src/parser/tests/snapshots/parser@func_def_multi_expr.input.snap
---
source: src/parser/mod.rs
assertion_line: 488
expression: asts
input_file: src/parser/tests/inputs/func_def_multi_expr.input

---
- - Ok:
      - Stmt:
          Fn:
            proto:
              name: a
              args:
                - - b
                  - I64
                - - c
                  - I64
            body:
              - Expr:
                  BinOp:
                    sym: Plus
                    lhs:
                      Expr:
                        BinOp:
                          sym: Plus
                          lhs:
                            Expr:
                              U64: 19
                          rhs:
                            Expr:
                              Var:
                                name: a
                    rhs:
                      Expr:
                        U64: 40
              - Expr:
                  BinOp:
                    sym: Plus
                    lhs:
                      Expr:
                        Var:
                          name: b
                    rhs:
                      Expr:
                        Var:
                          name: a
  - "(define (a b:i64 c:i64) (+ (+ 19 a) 40) (+ b a))"

