src/parser/tests/snapshots/parser@gt_lt.input.snap
---
source: src/parser/mod.rs
assertion_line: 472
expression: asts
input_file: src/parser/tests/inputs/gt_lt.input

---
- - Ok:
      - Expr:
          BinOp:
            sym: Gt
            lhs:
              BinOp:
                sym: Plus
                lhs:
                  Var:
                    name: a
                rhs:
                  Var:
                    name: b
            rhs:
              U64: 40
  - (> (+ a b) 40)
- - Ok:
      - Expr:
          BinOp:
            sym: Lt
            lhs:
              Var:
                name: a
            rhs:
              BinOp:
                sym: Div
                lhs:
                  Var:
                    name: b
                rhs:
                  U64: 40
  - (< a (/ b 40))

