src/parser/tests/snapshots/parser@if_else.input.snap
---
source: src/parser/mod.rs
assertion_line: 491
expression: asts
input_file: src/parser/tests/inputs/if_else.input

---
- - Ok:
      - Stmt:
          Cond:
            cond:
              Expr:
                BinOp:
                  sym: Gt
                  lhs:
                    Expr:
                      Var:
                        name: a
                  rhs:
                    Expr:
                      Var:
                        name: b
            cons:
              - Expr:
                  Var:
                    name: foo
            alt:
              - Expr:
                  Var:
                    name: bar
  - (if (> a b) foo bar)
- - Err:
      message: "Expecting 'if' or '{' after else"
      line: 1
      column: 23
  - "Parsing error: Expecting 'if' or '{' after else at 1:23"

