src/parser/tests/snapshots/parser@if_only.input.snap
---
source: src/parser/mod.rs
assertion_line: 535
expression: asts
input_file: src/parser/tests/inputs/if_only.input
---
- - Ok:
      nodes:
        - Expr:
            Cond:
              cond_expr:
                BinOp:
                  sym: Gt
                  lhs:
                    Expr:
                      Ident:
                        name: a
                        ty: ~
                  rhs:
                    Expr:
                      Ident:
                        name: b
                        ty: ~
                  ty: ~
              then_block:
                - Expr:
                    Ident:
                      name: foo
                      ty: ~
              else_block: ~
              ty: ~
  - (if (> a b) foo)
- - Ok:
      nodes:
        - Expr:
            Cond:
              cond_expr:
                BinOp:
                  sym: Gt
                  lhs:
                    Expr:
                      Ident:
                        name: a
                        ty: ~
                  rhs:
                    Expr:
                      Ident:
                        name: b
                        ty: ~
                  ty: ~
              then_block:
                - Expr:
                    Ident:
                      name: foo
                      ty: ~
              else_block:
                - Expr:
                    Ident:
                      name: bar
                      ty: ~
              ty: ~
  - (if (> a b) foo bar)
- - Ok:
      nodes:
        - Expr:
            Cond:
              cond_expr:
                BinOp:
                  sym: Gt
                  lhs:
                    Expr:
                      Ident:
                        name: a
                        ty: ~
                  rhs:
                    Expr:
                      Ident:
                        name: b
                        ty: ~
                  ty: ~
              then_block:
                - Expr:
                    Ident:
                      name: foo
                      ty: ~
              else_block:
                - Expr:
                    Cond:
                      cond_expr:
                        BinOp:
                          sym: Lt
                          lhs:
                            Expr:
                              Ident:
                                name: c
                                ty: ~
                          rhs:
                            Expr:
                              Ident:
                                name: a
                                ty: ~
                          ty: ~
                      then_block:
                        - Expr:
                            Ident:
                              name: bar
                              ty: ~
                      else_block: ~
                      ty: ~
              ty: ~
  - (if (> a b) foo (if (< c a) bar))
- - Ok:
      nodes:
        - Expr:
            Cond:
              cond_expr:
                BinOp:
                  sym: Gt
                  lhs:
                    Expr:
                      Ident:
                        name: a
                        ty: ~
                  rhs:
                    Expr:
                      Ident:
                        name: b
                        ty: ~
                  ty: ~
              then_block:
                - Expr:
                    Ident:
                      name: foo
                      ty: ~
              else_block:
                - Expr:
                    Cond:
                      cond_expr:
                        BinOp:
                          sym: Lt
                          lhs:
                            Expr:
                              Ident:
                                name: c
                                ty: ~
                          rhs:
                            Expr:
                              Ident:
                                name: a
                                ty: ~
                          ty: ~
                      then_block:
                        - Expr:
                            Ident:
                              name: bar
                              ty: ~
                      else_block:
                        - Expr:
                            Ident:
                              name: baz
                              ty: ~
                      ty: ~
              ty: ~
  - (if (> a b) foo (if (< c a) bar baz))
- - Err:
      message: "Expecting 'if' or '{' after else"
      line: 1
      column: 23
  - "Parsing error: Expecting 'if' or '{' after else at 1:23"

