src/parser/tests/snapshots/parser@let.input.snap
---
source: src/parser/mod.rs
assertion_line: 536
expression: asts
input_file: src/parser/tests/inputs/let.input
---
- - Ok:
      nodes:
        - Stmt:
            Let:
              name: x
              antn: Int32
              init:
                Expr:
                  Lit:
                    value:
                      Int32: 1
                    ty: ~
  - "(let x:int32 1)"
- - Ok:
      nodes:
        - Stmt:
            Let:
              name: x
              antn: Float
              init:
                Expr:
                  Lit:
                    value:
                      Float: 1.0
                    ty: ~
  - "(let x:float 1)"
- - Err:
      message: Premature end of expression
      line: 0
      column: 0
  - "Parsing error: Premature end of expression"
- - Ok:
      nodes:
        - Stmt:
            Let:
              name: x
              antn: Int32
              init: ~
  - "(let x:int32)"
- - Err:
      message: Type annotation required in let statement. Got EOF
      line: 0
      column: 0
  - "Parsing error: Type annotation required in let statement. Got EOF"
- - Err:
      message: Expecting colon in let statement. Got EOF
      line: 0
      column: 0
  - "Parsing error: Expecting colon in let statement. Got EOF"
- - Err:
      message: Expecting identifier after let. Got EOF
      line: 0
      column: 0
  - "Parsing error: Expecting identifier after let. Got EOF"

