src/parser/tests/snapshots/parser@multi_exprs.input.snap
---
source: src/parser/mod.rs
assertion_line: 555
expression: asts
input_file: src/parser/tests/inputs/multi_exprs.input
---
- - 19 ^ 21 ^ 40; 19 - 21 * 20 + 40
  - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Pow
              lhs:
                Expr:
                  Lit:
                    value:
                      UInt64: 19
                    ty: ~
              rhs:
                Expr:
                  BinOp:
                    sym: Pow
                    lhs:
                      Expr:
                        Lit:
                          value:
                            UInt64: 21
                          ty: ~
                    rhs:
                      Expr:
                        Lit:
                          value:
                            UInt64: 40
                          ty: ~
                    ty: ~
              ty: ~
        - Expr:
            BinOp:
              sym: Add
              lhs:
                Expr:
                  BinOp:
                    sym: Sub
                    lhs:
                      Expr:
                        Lit:
                          value:
                            UInt64: 19
                          ty: ~
                    rhs:
                      Expr:
                        BinOp:
                          sym: Mul
                          lhs:
                            Expr:
                              Lit:
                                value:
                                  UInt64: 21
                                ty: ~
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  UInt64: 20
                                ty: ~
                          ty: ~
                    ty: ~
              rhs:
                Expr:
                  Lit:
                    value:
                      UInt64: 40
                    ty: ~
              ty: ~
  - (^ 19 (^ 21 40))(+ (- 19 (* 21 20)) 40)

