src/parser/tests/snapshots/parser@multi_num.input.snap
---
source: src/parser/mod.rs
assertion_line: 536
expression: asts
input_file: src/parser/tests/inputs/multi_num.input
---
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Add
              lhs:
                Expr:
                  BinOp:
                    sym: Add
                    lhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 19
                          ty: ~
                    rhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 21
                          ty: ~
                    ty: ~
              rhs:
                Expr:
                  UnOp:
                    sym: Sub
                    rhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 40
                          ty: ~
                    ty: ~
              ty: ~
  - (+ (+ 19 21) (- 40))

