src/parser/tests/snapshots/parser@nullary_expr.input.snap
---
source: src/parser/mod.rs
assertion_line: 484
expression: asts
input_file: src/parser/tests/inputs/nullary_expr.input

---
- - Ok:
      nodes:
        - Expr:
            Call:
              name: a
              args: []
  - (a)

