src/parser/tests/snapshots/parser@op_prec.input.snap
---
source: src/parser/mod.rs
assertion_line: 536
expression: asts
input_file: src/parser/tests/inputs/op_prec.input
---
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Add
              lhs:
                Expr:
                  Lit:
                    value:
                      Int32: 19
                    ty: ~
              rhs:
                Expr:
                  BinOp:
                    sym: Mul
                    lhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 21
                          ty: ~
                    rhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 40
                          ty: ~
                    ty: ~
              ty: ~
  - (+ 19 (* 21 40))
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Sub
              lhs:
                Expr:
                  BinOp:
                    sym: Mul
                    lhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 19
                          ty: ~
                    rhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 21
                          ty: ~
                    ty: ~
              rhs:
                Expr:
                  Lit:
                    value:
                      Int32: 40
                    ty: ~
              ty: ~
  - (- (* 19 21) 40)
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Add
              lhs:
                Expr:
                  BinOp:
                    sym: Sub
                    lhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 19
                          ty: ~
                    rhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 21
                          ty: ~
                    ty: ~
              rhs:
                Expr:
                  Lit:
                    value:
                      Int32: 40
                    ty: ~
              ty: ~
  - (+ (- 19 21) 40)
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Add
              lhs:
                Expr:
                  BinOp:
                    sym: Sub
                    lhs:
                      Expr:
                        Lit:
                          value:
                            Int32: 19
                          ty: ~
                    rhs:
                      Expr:
                        BinOp:
                          sym: Mul
                          lhs:
                            Expr:
                              Lit:
                                value:
                                  Int32: 21
                                ty: ~
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  Int32: 20
                                ty: ~
                          ty: ~
                    ty: ~
              rhs:
                Expr:
                  Lit:
                    value:
                      Int32: 40
                    ty: ~
              ty: ~
  - (+ (- 19 (* 21 20)) 40)

