src/parser/tests/snapshots/parser@op_prec_r_assoc.input.snap
---
source: src/parser/mod.rs
assertion_line: 484
expression: asts
input_file: src/parser/tests/inputs/op_prec_r_assoc.input

---
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Pow
              lhs:
                Expr:
                  U64: 19
              rhs:
                Expr:
                  BinOp:
                    sym: Pow
                    lhs:
                      Expr:
                        U64: 21
                    rhs:
                      Expr:
                        U64: 40
  - (^ 19 (^ 21 40))
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Plus
              lhs:
                Expr:
                  BinOp:
                    sym: Pow
                    lhs:
                      Expr:
                        U64: 19
                    rhs:
                      Expr:
                        U64: 21
              rhs:
                Expr:
                  U64: 40
  - (+ (^ 19 21) 40)
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Div
              lhs:
                Expr:
                  BinOp:
                    sym: Pow
                    lhs:
                      Expr:
                        U64: 19
                    rhs:
                      Expr:
                        BinOp:
                          sym: Pow
                          lhs:
                            Expr:
                              U64: 21
                          rhs:
                            Expr:
                              U64: 40
              rhs:
                Expr:
                  U64: 2
  - (/ (^ 19 (^ 21 40)) 2)

